--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>CallMeIshmael</title>
-    <base href="/">
+    <title>Call Me, Ishmael</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
