--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8">
     <title>Call Me, Ishmael</title>
     <base href="/">
+    <meta name="author" content="Jared Hettinger">
+    <meta name="description" content="A demonstration of how various HTML elements will interact with Angular's (click) and (keyup) event handlers.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:description" content="A demonstration of how various HTML elements will interact with Angular's (click) and (keyup) event handlers." />
+    <meta property="og:image" content="" />
+    <meta property="og:title" content="Call Me, Ishmael" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kafkaesc.github.io/Call-Me-Ishmael" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Noto+Sans+TC:wght@100;300&family=Source+Serif+Pro:ital,wght@1,600&display=swap">
