Adding Twitter card image and meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
     <meta name="description" content="A demonstration of how various HTML elements will interact with Angular's (click) and (keyup) event handlers.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:description" content="A demonstration of how various HTML elements will interact with Angular's (click) and (keyup) event handlers." />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="./assets/meta/og.png" />
     <meta property="og:title" content="Call Me, Ishmael" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kafkaesc.github.io/Call-Me-Ishmael" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@_kafkaesc">
+    <meta name="twitter:description" content="A demonstration of how various HTML elements will interact with Angular's (click) and (keyup) event handlers.">
+    <meta name="twitter:image" content="./assets/meta/twitter.png">
+    <meta name="twitter:site" content="https://kafkaesc.github.io/Call-Me-Ishmael">
+    <meta name="twitter:title" content="Call Me, Ishmael">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
