--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Call-Me-Ishmael</title>
+		<title>Call-Me-Ishmael / Built by Jared Hettinger</title>
 		<base href="/" />
 		<meta name="author" content="Jared Hettinger" />
 		<meta
@@ -15,12 +15,12 @@
 			content="A demonstration of how various HTML elements will interact with Angular's (click) and (keyup) event handlers."
 		/>
 		<meta property="og:image" content="assets/meta/og.png" />
-		<meta property="og:title" content="Call-Me-Ishmael" />
-		<meta property="og:type" content="website" />
 		<meta
-			property="og:url"
-			content="https://call-me-ishmael.xyz"
+			property="og:title"
+			content="Call-Me-Ishmael / Built by Jared Hettinger"
 		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://call-me-ishmael.xyz" />
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:creator" content="@_kafkaesc" />
 		<meta
@@ -28,11 +28,11 @@
 			content="A demonstration of how various HTML elements will interact with Angular's (click) and (keyup) event handlers."
 		/>
 		<meta name="twitter:image" content="assets/meta/twitter.png" />
+		<meta name="twitter:site" content="https://call-me-ishmael.xyz" />
 		<meta
-			name="twitter:site"
-			content="https://call-me-ishmael.xyz"
+			name="twitter:title"
+			content="Call-Me-Ishmael / Built by Jared Hettinger"
 		/>
-		<meta name="twitter:title" content="Call-Me-Ishmael" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
